# ARMlab

armlab-f23-main/: .gitignore  README.md  mypy.ini  pyproject.toml
armlab-f23-main/config/: rx200_pox.csv
armlab-f23-main/install_scripts/config/: tags_Standard41h12.yaml
armlab-f23-main/launch/: launch_armlab.sh
armlab-f23-main/src/: camera.py  control_station.py  detect_color.py  kinematics.py  rxarm.py  state_machine.py  transformations.py
armlab-f23-main/src/resource/: config_parse.py
